CREATE TABLE IF NOT EXISTS photo (
    id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    attraction_id INT NOT NULL REFERENCES attraction(id) ON DELETE CASCADE,
    file_path TEXT NOT NULL,
    is_main BOOLEAN NOT NULL DEFAULT false,
    created_at TIMESTAMPTZ NOT NULL DEFAULT NOW()
);