// Code generated by protoc-gen-go. DO NOT EDIT.
// versions:
// 	protoc-gen-go v1.36.11
// 	protoc        v3.21.12
// source: proto/album.proto

package album

import (
	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
	emptypb "google.golang.org/protobuf/types/known/emptypb"
	reflect "reflect"
	sync "sync"
	unsafe "unsafe"
)

const (
	// Verify that this generated code is sufficiently up-to-date.
	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
	// Verify that runtime/protoimpl is sufficiently up-to-date.
	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
)

type CreateAlbumRequest struct {
	state         protoimpl.MessageState `protogen:"open.v1"`
	TripId        uint64                 `protobuf:"varint,1,opt,name=trip_id,json=tripId,proto3" json:"trip_id,omitempty"`
	Name          string                 `protobuf:"bytes,2,opt,name=name,proto3" json:"name,omitempty"`
	Description   string                 `protobuf:"bytes,3,opt,name=description,proto3" json:"description,omitempty"`
	MaxPhotos     int32                  `protobuf:"varint,4,opt,name=max_photos,json=maxPhotos,proto3" json:"max_photos,omitempty"`
	unknownFields protoimpl.UnknownFields
	sizeCache     protoimpl.SizeCache
}

func (x *CreateAlbumRequest) Reset() {
	*x = CreateAlbumRequest{}
	mi := &file_proto_album_proto_msgTypes[0]
	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
	ms.StoreMessageInfo(mi)
}

func (x *CreateAlbumRequest) String() string {
	return protoimpl.X.MessageStringOf(x)
}

func (*CreateAlbumRequest) ProtoMessage() {}

func (x *CreateAlbumRequest) ProtoReflect() protoreflect.Message {
	mi := &file_proto_album_proto_msgTypes[0]
	if x != nil {
		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
		if ms.LoadMessageInfo() == nil {
			ms.StoreMessageInfo(mi)
		}
		return ms
	}
	return mi.MessageOf(x)
}

// Deprecated: Use CreateAlbumRequest.ProtoReflect.Descriptor instead.
func (*CreateAlbumRequest) Descriptor() ([]byte, []int) {
	return file_proto_album_proto_rawDescGZIP(), []int{0}
}

func (x *CreateAlbumRequest) GetTripId() uint64 {
	if x != nil {
		return x.TripId
	}
	return 0
}

func (x *CreateAlbumRequest) GetName() string {
	if x != nil {
		return x.Name
	}
	return ""
}

func (x *CreateAlbumRequest) GetDescription() string {
	if x != nil {
		return x.Description
	}
	return ""
}

func (x *CreateAlbumRequest) GetMaxPhotos() int32 {
	if x != nil {
		return x.MaxPhotos
	}
	return 0
}

type GetAlbumRequest struct {
	state         protoimpl.MessageState `protogen:"open.v1"`
	Id            uint64                 `protobuf:"varint,1,opt,name=id,proto3" json:"id,omitempty"`
	unknownFields protoimpl.UnknownFields
	sizeCache     protoimpl.SizeCache
}

func (x *GetAlbumRequest) Reset() {
	*x = GetAlbumRequest{}
	mi := &file_proto_album_proto_msgTypes[1]
	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
	ms.StoreMessageInfo(mi)
}

func (x *GetAlbumRequest) String() string {
	return protoimpl.X.MessageStringOf(x)
}

func (*GetAlbumRequest) ProtoMessage() {}

func (x *GetAlbumRequest) ProtoReflect() protoreflect.Message {
	mi := &file_proto_album_proto_msgTypes[1]
	if x != nil {
		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
		if ms.LoadMessageInfo() == nil {
			ms.StoreMessageInfo(mi)
		}
		return ms
	}
	return mi.MessageOf(x)
}

// Deprecated: Use GetAlbumRequest.ProtoReflect.Descriptor instead.
func (*GetAlbumRequest) Descriptor() ([]byte, []int) {
	return file_proto_album_proto_rawDescGZIP(), []int{1}
}

func (x *GetAlbumRequest) GetId() uint64 {
	if x != nil {
		return x.Id
	}
	return 0
}

type GetAlbumByTripRequest struct {
	state         protoimpl.MessageState `protogen:"open.v1"`
	TripId        uint64                 `protobuf:"varint,1,opt,name=trip_id,json=tripId,proto3" json:"trip_id,omitempty"`
	unknownFields protoimpl.UnknownFields
	sizeCache     protoimpl.SizeCache
}

func (x *GetAlbumByTripRequest) Reset() {
	*x = GetAlbumByTripRequest{}
	mi := &file_proto_album_proto_msgTypes[2]
	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
	ms.StoreMessageInfo(mi)
}

func (x *GetAlbumByTripRequest) String() string {
	return protoimpl.X.MessageStringOf(x)
}

func (*GetAlbumByTripRequest) ProtoMessage() {}

func (x *GetAlbumByTripRequest) ProtoReflect() protoreflect.Message {
	mi := &file_proto_album_proto_msgTypes[2]
	if x != nil {
		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
		if ms.LoadMessageInfo() == nil {
			ms.StoreMessageInfo(mi)
		}
		return ms
	}
	return mi.MessageOf(x)
}

// Deprecated: Use GetAlbumByTripRequest.ProtoReflect.Descriptor instead.
func (*GetAlbumByTripRequest) Descriptor() ([]byte, []int) {
	return file_proto_album_proto_rawDescGZIP(), []int{2}
}

func (x *GetAlbumByTripRequest) GetTripId() uint64 {
	if x != nil {
		return x.TripId
	}
	return 0
}

type UpdateAlbumRequest struct {
	state         protoimpl.MessageState `protogen:"open.v1"`
	Id            uint64                 `protobuf:"varint,1,opt,name=id,proto3" json:"id,omitempty"`
	Name          string                 `protobuf:"bytes,2,opt,name=name,proto3" json:"name,omitempty"`
	Description   string                 `protobuf:"bytes,3,opt,name=description,proto3" json:"description,omitempty"`
	MaxPhotos     int32                  `protobuf:"varint,4,opt,name=max_photos,json=maxPhotos,proto3" json:"max_photos,omitempty"`
	unknownFields protoimpl.UnknownFields
	sizeCache     protoimpl.SizeCache
}

func (x *UpdateAlbumRequest) Reset() {
	*x = UpdateAlbumRequest{}
	mi := &file_proto_album_proto_msgTypes[3]
	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
	ms.StoreMessageInfo(mi)
}

func (x *UpdateAlbumRequest) String() string {
	return protoimpl.X.MessageStringOf(x)
}

func (*UpdateAlbumRequest) ProtoMessage() {}

func (x *UpdateAlbumRequest) ProtoReflect() protoreflect.Message {
	mi := &file_proto_album_proto_msgTypes[3]
	if x != nil {
		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
		if ms.LoadMessageInfo() == nil {
			ms.StoreMessageInfo(mi)
		}
		return ms
	}
	return mi.MessageOf(x)
}

// Deprecated: Use UpdateAlbumRequest.ProtoReflect.Descriptor instead.
func (*UpdateAlbumRequest) Descriptor() ([]byte, []int) {
	return file_proto_album_proto_rawDescGZIP(), []int{3}
}

func (x *UpdateAlbumRequest) GetId() uint64 {
	if x != nil {
		return x.Id
	}
	return 0
}

func (x *UpdateAlbumRequest) GetName() string {
	if x != nil {
		return x.Name
	}
	return ""
}

func (x *UpdateAlbumRequest) GetDescription() string {
	if x != nil {
		return x.Description
	}
	return ""
}

func (x *UpdateAlbumRequest) GetMaxPhotos() int32 {
	if x != nil {
		return x.MaxPhotos
	}
	return 0
}

type DeleteAlbumRequest struct {
	state         protoimpl.MessageState `protogen:"open.v1"`
	Id            uint64                 `protobuf:"varint,1,opt,name=id,proto3" json:"id,omitempty"`
	unknownFields protoimpl.UnknownFields
	sizeCache     protoimpl.SizeCache
}

func (x *DeleteAlbumRequest) Reset() {
	*x = DeleteAlbumRequest{}
	mi := &file_proto_album_proto_msgTypes[4]
	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
	ms.StoreMessageInfo(mi)
}

func (x *DeleteAlbumRequest) String() string {
	return protoimpl.X.MessageStringOf(x)
}

func (*DeleteAlbumRequest) ProtoMessage() {}

func (x *DeleteAlbumRequest) ProtoReflect() protoreflect.Message {
	mi := &file_proto_album_proto_msgTypes[4]
	if x != nil {
		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
		if ms.LoadMessageInfo() == nil {
			ms.StoreMessageInfo(mi)
		}
		return ms
	}
	return mi.MessageOf(x)
}

// Deprecated: Use DeleteAlbumRequest.ProtoReflect.Descriptor instead.
func (*DeleteAlbumRequest) Descriptor() ([]byte, []int) {
	return file_proto_album_proto_rawDescGZIP(), []int{4}
}

func (x *DeleteAlbumRequest) GetId() uint64 {
	if x != nil {
		return x.Id
	}
	return 0
}

type Album struct {
	state         protoimpl.MessageState `protogen:"open.v1"`
	Id            uint64                 `protobuf:"varint,1,opt,name=id,proto3" json:"id,omitempty"`
	TripId        uint64                 `protobuf:"varint,2,opt,name=trip_id,json=tripId,proto3" json:"trip_id,omitempty"`
	Name          string                 `protobuf:"bytes,3,opt,name=name,proto3" json:"name,omitempty"`
	Description   string                 `protobuf:"bytes,4,opt,name=description,proto3" json:"description,omitempty"`
	CoverPhotoId  *uint64                `protobuf:"varint,5,opt,name=cover_photo_id,json=coverPhotoId,proto3,oneof" json:"cover_photo_id,omitempty"`
	MaxPhotos     int32                  `protobuf:"varint,6,opt,name=max_photos,json=maxPhotos,proto3" json:"max_photos,omitempty"`
	unknownFields protoimpl.UnknownFields
	sizeCache     protoimpl.SizeCache
}

func (x *Album) Reset() {
	*x = Album{}
	mi := &file_proto_album_proto_msgTypes[5]
	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
	ms.StoreMessageInfo(mi)
}

func (x *Album) String() string {
	return protoimpl.X.MessageStringOf(x)
}

func (*Album) ProtoMessage() {}

func (x *Album) ProtoReflect() protoreflect.Message {
	mi := &file_proto_album_proto_msgTypes[5]
	if x != nil {
		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
		if ms.LoadMessageInfo() == nil {
			ms.StoreMessageInfo(mi)
		}
		return ms
	}
	return mi.MessageOf(x)
}

// Deprecated: Use Album.ProtoReflect.Descriptor instead.
func (*Album) Descriptor() ([]byte, []int) {
	return file_proto_album_proto_rawDescGZIP(), []int{5}
}

func (x *Album) GetId() uint64 {
	if x != nil {
		return x.Id
	}
	return 0
}

func (x *Album) GetTripId() uint64 {
	if x != nil {
		return x.TripId
	}
	return 0
}

func (x *Album) GetName() string {
	if x != nil {
		return x.Name
	}
	return ""
}

func (x *Album) GetDescription() string {
	if x != nil {
		return x.Description
	}
	return ""
}

func (x *Album) GetCoverPhotoId() uint64 {
	if x != nil && x.CoverPhotoId != nil {
		return *x.CoverPhotoId
	}
	return 0
}

func (x *Album) GetMaxPhotos() int32 {
	if x != nil {
		return x.MaxPhotos
	}
	return 0
}

type AddPhotoRequest struct {
	state         protoimpl.MessageState `protogen:"open.v1"`
	AlbumId       uint64                 `protobuf:"varint,1,opt,name=album_id,json=albumId,proto3" json:"album_id,omitempty"`
	PhotoId       uint64                 `protobuf:"varint,2,opt,name=photo_id,json=photoId,proto3" json:"photo_id,omitempty"`
	Order         int32                  `protobuf:"varint,3,opt,name=order,proto3" json:"order,omitempty"`
	unknownFields protoimpl.UnknownFields
	sizeCache     protoimpl.SizeCache
}

func (x *AddPhotoRequest) Reset() {
	*x = AddPhotoRequest{}
	mi := &file_proto_album_proto_msgTypes[6]
	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
	ms.StoreMessageInfo(mi)
}

func (x *AddPhotoRequest) String() string {
	return protoimpl.X.MessageStringOf(x)
}

func (*AddPhotoRequest) ProtoMessage() {}

func (x *AddPhotoRequest) ProtoReflect() protoreflect.Message {
	mi := &file_proto_album_proto_msgTypes[6]
	if x != nil {
		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
		if ms.LoadMessageInfo() == nil {
			ms.StoreMessageInfo(mi)
		}
		return ms
	}
	return mi.MessageOf(x)
}

// Deprecated: Use AddPhotoRequest.ProtoReflect.Descriptor instead.
func (*AddPhotoRequest) Descriptor() ([]byte, []int) {
	return file_proto_album_proto_rawDescGZIP(), []int{6}
}

func (x *AddPhotoRequest) GetAlbumId() uint64 {
	if x != nil {
		return x.AlbumId
	}
	return 0
}

func (x *AddPhotoRequest) GetPhotoId() uint64 {
	if x != nil {
		return x.PhotoId
	}
	return 0
}

func (x *AddPhotoRequest) GetOrder() int32 {
	if x != nil {
		return x.Order
	}
	return 0
}

// UploadPhotoRequest: путь к уже сохранённому файлу, album_id для связки
type UploadPhotoRequest struct {
	state         protoimpl.MessageState `protogen:"open.v1"`
	AlbumId       uint64                 `protobuf:"varint,1,opt,name=album_id,json=albumId,proto3" json:"album_id,omitempty"`
	FilePath      string                 `protobuf:"bytes,2,opt,name=file_path,json=filePath,proto3" json:"file_path,omitempty"`
	unknownFields protoimpl.UnknownFields
	sizeCache     protoimpl.SizeCache
}

func (x *UploadPhotoRequest) Reset() {
	*x = UploadPhotoRequest{}
	mi := &file_proto_album_proto_msgTypes[7]
	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
	ms.StoreMessageInfo(mi)
}

func (x *UploadPhotoRequest) String() string {
	return protoimpl.X.MessageStringOf(x)
}

func (*UploadPhotoRequest) ProtoMessage() {}

func (x *UploadPhotoRequest) ProtoReflect() protoreflect.Message {
	mi := &file_proto_album_proto_msgTypes[7]
	if x != nil {
		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
		if ms.LoadMessageInfo() == nil {
			ms.StoreMessageInfo(mi)
		}
		return ms
	}
	return mi.MessageOf(x)
}

// Deprecated: Use UploadPhotoRequest.ProtoReflect.Descriptor instead.
func (*UploadPhotoRequest) Descriptor() ([]byte, []int) {
	return file_proto_album_proto_rawDescGZIP(), []int{7}
}

func (x *UploadPhotoRequest) GetAlbumId() uint64 {
	if x != nil {
		return x.AlbumId
	}
	return 0
}

func (x *UploadPhotoRequest) GetFilePath() string {
	if x != nil {
		return x.FilePath
	}
	return ""
}

type UploadPhotoResponse struct {
	state         protoimpl.MessageState `protogen:"open.v1"`
	PhotoId       uint64                 `protobuf:"varint,1,opt,name=photo_id,json=photoId,proto3" json:"photo_id,omitempty"`
	FileUrl       string                 `protobuf:"bytes,2,opt,name=file_url,json=fileUrl,proto3" json:"file_url,omitempty"`
	unknownFields protoimpl.UnknownFields
	sizeCache     protoimpl.SizeCache
}

func (x *UploadPhotoResponse) Reset() {
	*x = UploadPhotoResponse{}
	mi := &file_proto_album_proto_msgTypes[8]
	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
	ms.StoreMessageInfo(mi)
}

func (x *UploadPhotoResponse) String() string {
	return protoimpl.X.MessageStringOf(x)
}

func (*UploadPhotoResponse) ProtoMessage() {}

func (x *UploadPhotoResponse) ProtoReflect() protoreflect.Message {
	mi := &file_proto_album_proto_msgTypes[8]
	if x != nil {
		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
		if ms.LoadMessageInfo() == nil {
			ms.StoreMessageInfo(mi)
		}
		return ms
	}
	return mi.MessageOf(x)
}

// Deprecated: Use UploadPhotoResponse.ProtoReflect.Descriptor instead.
func (*UploadPhotoResponse) Descriptor() ([]byte, []int) {
	return file_proto_album_proto_rawDescGZIP(), []int{8}
}

func (x *UploadPhotoResponse) GetPhotoId() uint64 {
	if x != nil {
		return x.PhotoId
	}
	return 0
}

func (x *UploadPhotoResponse) GetFileUrl() string {
	if x != nil {
		return x.FileUrl
	}
	return ""
}

type RemovePhotoRequest struct {
	state         protoimpl.MessageState `protogen:"open.v1"`
	AlbumId       uint64                 `protobuf:"varint,1,opt,name=album_id,json=albumId,proto3" json:"album_id,omitempty"`
	PhotoId       uint64                 `protobuf:"varint,2,opt,name=photo_id,json=photoId,proto3" json:"photo_id,omitempty"`
	unknownFields protoimpl.UnknownFields
	sizeCache     protoimpl.SizeCache
}

func (x *RemovePhotoRequest) Reset() {
	*x = RemovePhotoRequest{}
	mi := &file_proto_album_proto_msgTypes[9]
	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
	ms.StoreMessageInfo(mi)
}

func (x *RemovePhotoRequest) String() string {
	return protoimpl.X.MessageStringOf(x)
}

func (*RemovePhotoRequest) ProtoMessage() {}

func (x *RemovePhotoRequest) ProtoReflect() protoreflect.Message {
	mi := &file_proto_album_proto_msgTypes[9]
	if x != nil {
		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
		if ms.LoadMessageInfo() == nil {
			ms.StoreMessageInfo(mi)
		}
		return ms
	}
	return mi.MessageOf(x)
}

// Deprecated: Use RemovePhotoRequest.ProtoReflect.Descriptor instead.
func (*RemovePhotoRequest) Descriptor() ([]byte, []int) {
	return file_proto_album_proto_rawDescGZIP(), []int{9}
}

func (x *RemovePhotoRequest) GetAlbumId() uint64 {
	if x != nil {
		return x.AlbumId
	}
	return 0
}

func (x *RemovePhotoRequest) GetPhotoId() uint64 {
	if x != nil {
		return x.PhotoId
	}
	return 0
}

type AlbumPhoto struct {
	state         protoimpl.MessageState `protogen:"open.v1"`
	AlbumId       uint64                 `protobuf:"varint,1,opt,name=album_id,json=albumId,proto3" json:"album_id,omitempty"`
	PhotoId       uint64                 `protobuf:"varint,2,opt,name=photo_id,json=photoId,proto3" json:"photo_id,omitempty"`
	OrderIndex    int32                  `protobuf:"varint,3,opt,name=order_index,json=orderIndex,proto3" json:"order_index,omitempty"`
	CreatedAt     string                 `protobuf:"bytes,4,opt,name=created_at,json=createdAt,proto3" json:"created_at,omitempty"`
	FileUrl       string                 `protobuf:"bytes,5,opt,name=file_url,json=fileUrl,proto3" json:"file_url,omitempty"`
	unknownFields protoimpl.UnknownFields
	sizeCache     protoimpl.SizeCache
}

func (x *AlbumPhoto) Reset() {
	*x = AlbumPhoto{}
	mi := &file_proto_album_proto_msgTypes[10]
	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
	ms.StoreMessageInfo(mi)
}

func (x *AlbumPhoto) String() string {
	return protoimpl.X.MessageStringOf(x)
}

func (*AlbumPhoto) ProtoMessage() {}

func (x *AlbumPhoto) ProtoReflect() protoreflect.Message {
	mi := &file_proto_album_proto_msgTypes[10]
	if x != nil {
		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
		if ms.LoadMessageInfo() == nil {
			ms.StoreMessageInfo(mi)
		}
		return ms
	}
	return mi.MessageOf(x)
}

// Deprecated: Use AlbumPhoto.ProtoReflect.Descriptor instead.
func (*AlbumPhoto) Descriptor() ([]byte, []int) {
	return file_proto_album_proto_rawDescGZIP(), []int{10}
}

func (x *AlbumPhoto) GetAlbumId() uint64 {
	if x != nil {
		return x.AlbumId
	}
	return 0
}

func (x *AlbumPhoto) GetPhotoId() uint64 {
	if x != nil {
		return x.PhotoId
	}
	return 0
}

func (x *AlbumPhoto) GetOrderIndex() int32 {
	if x != nil {
		return x.OrderIndex
	}
	return 0
}

func (x *AlbumPhoto) GetCreatedAt() string {
	if x != nil {
		return x.CreatedAt
	}
	return ""
}

func (x *AlbumPhoto) GetFileUrl() string {
	if x != nil {
		return x.FileUrl
	}
	return ""
}

type GetAlbumPhotosRequest struct {
	state         protoimpl.MessageState `protogen:"open.v1"`
	AlbumId       uint64                 `protobuf:"varint,1,opt,name=album_id,json=albumId,proto3" json:"album_id,omitempty"`
	unknownFields protoimpl.UnknownFields
	sizeCache     protoimpl.SizeCache
}

func (x *GetAlbumPhotosRequest) Reset() {
	*x = GetAlbumPhotosRequest{}
	mi := &file_proto_album_proto_msgTypes[11]
	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
	ms.StoreMessageInfo(mi)
}

func (x *GetAlbumPhotosRequest) String() string {
	return protoimpl.X.MessageStringOf(x)
}

func (*GetAlbumPhotosRequest) ProtoMessage() {}

func (x *GetAlbumPhotosRequest) ProtoReflect() protoreflect.Message {
	mi := &file_proto_album_proto_msgTypes[11]
	if x != nil {
		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
		if ms.LoadMessageInfo() == nil {
			ms.StoreMessageInfo(mi)
		}
		return ms
	}
	return mi.MessageOf(x)
}

// Deprecated: Use GetAlbumPhotosRequest.ProtoReflect.Descriptor instead.
func (*GetAlbumPhotosRequest) Descriptor() ([]byte, []int) {
	return file_proto_album_proto_rawDescGZIP(), []int{11}
}

func (x *GetAlbumPhotosRequest) GetAlbumId() uint64 {
	if x != nil {
		return x.AlbumId
	}
	return 0
}

type GetAlbumPhotosResponse struct {
	state         protoimpl.MessageState `protogen:"open.v1"`
	Photos        []*AlbumPhoto          `protobuf:"bytes,1,rep,name=photos,proto3" json:"photos,omitempty"`
	unknownFields protoimpl.UnknownFields
	sizeCache     protoimpl.SizeCache
}

func (x *GetAlbumPhotosResponse) Reset() {
	*x = GetAlbumPhotosResponse{}
	mi := &file_proto_album_proto_msgTypes[12]
	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
	ms.StoreMessageInfo(mi)
}

func (x *GetAlbumPhotosResponse) String() string {
	return protoimpl.X.MessageStringOf(x)
}

func (*GetAlbumPhotosResponse) ProtoMessage() {}

func (x *GetAlbumPhotosResponse) ProtoReflect() protoreflect.Message {
	mi := &file_proto_album_proto_msgTypes[12]
	if x != nil {
		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
		if ms.LoadMessageInfo() == nil {
			ms.StoreMessageInfo(mi)
		}
		return ms
	}
	return mi.MessageOf(x)
}

// Deprecated: Use GetAlbumPhotosResponse.ProtoReflect.Descriptor instead.
func (*GetAlbumPhotosResponse) Descriptor() ([]byte, []int) {
	return file_proto_album_proto_rawDescGZIP(), []int{12}
}

func (x *GetAlbumPhotosResponse) GetPhotos() []*AlbumPhoto {
	if x != nil {
		return x.Photos
	}
	return nil
}

var File_proto_album_proto protoreflect.FileDescriptor

const file_proto_album_proto_rawDesc = "" +
	"\n" +
	"\x11proto/album.proto\x12\x05album\x1a\x1bgoogle/protobuf/empty.proto\"\x82\x01\n" +
	"\x12CreateAlbumRequest\x12\x17\n" +
	"\atrip_id\x18\x01 \x01(\x04R\x06tripId\x12\x12\n" +
	"\x04name\x18\x02 \x01(\tR\x04name\x12 \n" +
	"\vdescription\x18\x03 \x01(\tR\vdescription\x12\x1d\n" +
	"\n" +
	"max_photos\x18\x04 \x01(\x05R\tmaxPhotos\"!\n" +
	"\x0fGetAlbumRequest\x12\x0e\n" +
	"\x02id\x18\x01 \x01(\x04R\x02id\"0\n" +
	"\x15GetAlbumByTripRequest\x12\x17\n" +
	"\atrip_id\x18\x01 \x01(\x04R\x06tripId\"y\n" +
	"\x12UpdateAlbumRequest\x12\x0e\n" +
	"\x02id\x18\x01 \x01(\x04R\x02id\x12\x12\n" +
	"\x04name\x18\x02 \x01(\tR\x04name\x12 \n" +
	"\vdescription\x18\x03 \x01(\tR\vdescription\x12\x1d\n" +
	"\n" +
	"max_photos\x18\x04 \x01(\x05R\tmaxPhotos\"$\n" +
	"\x12DeleteAlbumRequest\x12\x0e\n" +
	"\x02id\x18\x01 \x01(\x04R\x02id\"\xc3\x01\n" +
	"\x05Album\x12\x0e\n" +
	"\x02id\x18\x01 \x01(\x04R\x02id\x12\x17\n" +
	"\atrip_id\x18\x02 \x01(\x04R\x06tripId\x12\x12\n" +
	"\x04name\x18\x03 \x01(\tR\x04name\x12 \n" +
	"\vdescription\x18\x04 \x01(\tR\vdescription\x12)\n" +
	"\x0ecover_photo_id\x18\x05 \x01(\x04H\x00R\fcoverPhotoId\x88\x01\x01\x12\x1d\n" +
	"\n" +
	"max_photos\x18\x06 \x01(\x05R\tmaxPhotosB\x11\n" +
	"\x0f_cover_photo_id\"]\n" +
	"\x0fAddPhotoRequest\x12\x19\n" +
	"\balbum_id\x18\x01 \x01(\x04R\aalbumId\x12\x19\n" +
	"\bphoto_id\x18\x02 \x01(\x04R\aphotoId\x12\x14\n" +
	"\x05order\x18\x03 \x01(\x05R\x05order\"L\n" +
	"\x12UploadPhotoRequest\x12\x19\n" +
	"\balbum_id\x18\x01 \x01(\x04R\aalbumId\x12\x1b\n" +
	"\tfile_path\x18\x02 \x01(\tR\bfilePath\"K\n" +
	"\x13UploadPhotoResponse\x12\x19\n" +
	"\bphoto_id\x18\x01 \x01(\x04R\aphotoId\x12\x19\n" +
	"\bfile_url\x18\x02 \x01(\tR\afileUrl\"J\n" +
	"\x12RemovePhotoRequest\x12\x19\n" +
	"\balbum_id\x18\x01 \x01(\x04R\aalbumId\x12\x19\n" +
	"\bphoto_id\x18\x02 \x01(\x04R\aphotoId\"\x9d\x01\n" +
	"\n" +
	"AlbumPhoto\x12\x19\n" +
	"\balbum_id\x18\x01 \x01(\x04R\aalbumId\x12\x19\n" +
	"\bphoto_id\x18\x02 \x01(\x04R\aphotoId\x12\x1f\n" +
	"\vorder_index\x18\x03 \x01(\x05R\n" +
	"orderIndex\x12\x1d\n" +
	"\n" +
	"created_at\x18\x04 \x01(\tR\tcreatedAt\x12\x19\n" +
	"\bfile_url\x18\x05 \x01(\tR\afileUrl\"2\n" +
	"\x15GetAlbumPhotosRequest\x12\x19\n" +
	"\balbum_id\x18\x01 \x01(\x04R\aalbumId\"C\n" +
	"\x16GetAlbumPhotosResponse\x12)\n" +
	"\x06photos\x18\x01 \x03(\v2\x11.album.AlbumPhotoR\x06photos2\xa0\x04\n" +
	"\fAlbumService\x121\n" +
	"\x06Create\x12\x19.album.CreateAlbumRequest\x1a\f.album.Album\x12+\n" +
	"\x03Get\x12\x16.album.GetAlbumRequest\x1a\f.album.Album\x127\n" +
	"\tGetByTrip\x12\x1c.album.GetAlbumByTripRequest\x1a\f.album.Album\x121\n" +
	"\x06Update\x12\x19.album.UpdateAlbumRequest\x1a\f.album.Album\x12;\n" +
	"\x06Delete\x12\x19.album.DeleteAlbumRequest\x1a\x16.google.protobuf.Empty\x12D\n" +
	"\vUploadPhoto\x12\x19.album.UploadPhotoRequest\x1a\x1a.album.UploadPhotoResponse\x125\n" +
	"\bAddPhoto\x12\x16.album.AddPhotoRequest\x1a\x11.album.AlbumPhoto\x12@\n" +
	"\vRemovePhoto\x12\x19.album.RemovePhotoRequest\x1a\x16.google.protobuf.Empty\x12H\n" +
	"\tGetPhotos\x12\x1c.album.GetAlbumPhotosRequest\x1a\x1d.album.GetAlbumPhotosResponseB\x0eZ\fpkg/pb/albumb\x06proto3"

var (
	file_proto_album_proto_rawDescOnce sync.Once
	file_proto_album_proto_rawDescData []byte
)

func file_proto_album_proto_rawDescGZIP() []byte {
	file_proto_album_proto_rawDescOnce.Do(func() {
		file_proto_album_proto_rawDescData = protoimpl.X.CompressGZIP(unsafe.Slice(unsafe.StringData(file_proto_album_proto_rawDesc), len(file_proto_album_proto_rawDesc)))
	})
	return file_proto_album_proto_rawDescData
}

var file_proto_album_proto_msgTypes = make([]protoimpl.MessageInfo, 13)
var file_proto_album_proto_goTypes = []any{
	(*CreateAlbumRequest)(nil),     // 0: album.CreateAlbumRequest
	(*GetAlbumRequest)(nil),        // 1: album.GetAlbumRequest
	(*GetAlbumByTripRequest)(nil),  // 2: album.GetAlbumByTripRequest
	(*UpdateAlbumRequest)(nil),     // 3: album.UpdateAlbumRequest
	(*DeleteAlbumRequest)(nil),     // 4: album.DeleteAlbumRequest
	(*Album)(nil),                  // 5: album.Album
	(*AddPhotoRequest)(nil),        // 6: album.AddPhotoRequest
	(*UploadPhotoRequest)(nil),     // 7: album.UploadPhotoRequest
	(*UploadPhotoResponse)(nil),    // 8: album.UploadPhotoResponse
	(*RemovePhotoRequest)(nil),     // 9: album.RemovePhotoRequest
	(*AlbumPhoto)(nil),             // 10: album.AlbumPhoto
	(*GetAlbumPhotosRequest)(nil),  // 11: album.GetAlbumPhotosRequest
	(*GetAlbumPhotosResponse)(nil), // 12: album.GetAlbumPhotosResponse
	(*emptypb.Empty)(nil),          // 13: google.protobuf.Empty
}
var file_proto_album_proto_depIdxs = []int32{
	10, // 0: album.GetAlbumPhotosResponse.photos:type_name -> album.AlbumPhoto
	0,  // 1: album.AlbumService.Create:input_type -> album.CreateAlbumRequest
	1,  // 2: album.AlbumService.Get:input_type -> album.GetAlbumRequest
	2,  // 3: album.AlbumService.GetByTrip:input_type -> album.GetAlbumByTripRequest
	3,  // 4: album.AlbumService.Update:input_type -> album.UpdateAlbumRequest
	4,  // 5: album.AlbumService.Delete:input_type -> album.DeleteAlbumRequest
	7,  // 6: album.AlbumService.UploadPhoto:input_type -> album.UploadPhotoRequest
	6,  // 7: album.AlbumService.AddPhoto:input_type -> album.AddPhotoRequest
	9,  // 8: album.AlbumService.RemovePhoto:input_type -> album.RemovePhotoRequest
	11, // 9: album.AlbumService.GetPhotos:input_type -> album.GetAlbumPhotosRequest
	5,  // 10: album.AlbumService.Create:output_type -> album.Album
	5,  // 11: album.AlbumService.Get:output_type -> album.Album
	5,  // 12: album.AlbumService.GetByTrip:output_type -> album.Album
	5,  // 13: album.AlbumService.Update:output_type -> album.Album
	13, // 14: album.AlbumService.Delete:output_type -> google.protobuf.Empty
	8,  // 15: album.AlbumService.UploadPhoto:output_type -> album.UploadPhotoResponse
	10, // 16: album.AlbumService.AddPhoto:output_type -> album.AlbumPhoto
	13, // 17: album.AlbumService.RemovePhoto:output_type -> google.protobuf.Empty
	12, // 18: album.AlbumService.GetPhotos:output_type -> album.GetAlbumPhotosResponse
	10, // [10:19] is the sub-list for method output_type
	1,  // [1:10] is the sub-list for method input_type
	1,  // [1:1] is the sub-list for extension type_name
	1,  // [1:1] is the sub-list for extension extendee
	0,  // [0:1] is the sub-list for field type_name
}

func init() { file_proto_album_proto_init() }
func file_proto_album_proto_init() {
	if File_proto_album_proto != nil {
		return
	}
	file_proto_album_proto_msgTypes[5].OneofWrappers = []any{}
	type x struct{}
	out := protoimpl.TypeBuilder{
		File: protoimpl.DescBuilder{
			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
			RawDescriptor: unsafe.Slice(unsafe.StringData(file_proto_album_proto_rawDesc), len(file_proto_album_proto_rawDesc)),
			NumEnums:      0,
			NumMessages:   13,
			NumExtensions: 0,
			NumServices:   1,
		},
		GoTypes:           file_proto_album_proto_goTypes,
		DependencyIndexes: file_proto_album_proto_depIdxs,
		MessageInfos:      file_proto_album_proto_msgTypes,
	}.Build()
	File_proto_album_proto = out.File
	file_proto_album_proto_goTypes = nil
	file_proto_album_proto_depIdxs = nil
}
